--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- Animacja trwa 1 sekundę z wyjątkiem ostatniego elementu w którym trwa 3 sekund (ta sama animacja, ale dłuższa) -->
-<!-- ostatni element ma odwrócony kierunek (reverse) -->
-<!-- Kolory elementów: lewy górny róg: czarny, prawy górny róg: czerwony, prawy dolny róg: zielony i lewy dolny róg: niebieski -->
-<!-- Zrób tylko jedną animację (keyframes) -->
-<!-- Opóźnienie .2s (kaażdy kolejny element) -->
-
 <!DOCTYPE html>
 <html lang="pl">
 
@@ -11,11 +5,197 @@
     <meta charset="UTF-8">
     <title>Disco</title>
     <style>
+        div {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: darkred;
+            animation: disco 2s linear infinite;
+        }
 
+        div:nth-child(2) {
+            animation-delay: .2s;
+        }
+
+        div:nth-child(3) {
+            animation-delay: .4s;
+        }
+
+        div:nth-child(4) {
+            animation-delay: .6s;
+        }
+
+        div:nth-child(5) {
+            animation-delay: .8s;
+        }
+
+        div:nth-child(6) {
+            animation-delay: 1s;
+        }
+
+        div:nth-child(7) {
+            animation-delay: 1.2s;
+        }
+
+        div:nth-child(8) {
+            animation-delay: 1.4s;
+        }
+
+        div:nth-child(9) {
+            animation-delay: 1.6s;
+        }
+
+        div:nth-child(10) {
+            animation-delay: 1.8s;
+        }
+
+        div:nth-child(11) {
+            animation-direction: reverse;
+        }
+
+        div:nth-child(12) {
+            animation-delay: .2s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(13) {
+            animation-delay: .4s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(14) {
+            animation-delay: .6s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(15) {
+            animation-delay: .8s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(16) {
+            animation-delay: 1s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(17) {
+            animation-delay: 1.2s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(18) {
+            animation-delay: 1.4s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(19) {
+            animation-delay: 1.6s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(20) {
+            animation-delay: 1.8s;
+            animation-direction: reverse;
+        }
+
+        div:nth-child(21) {}
+
+        div:nth-child(22) {}
+
+        div:nth-child(23) {}
+
+        div:nth-child(24) {}
+
+        div:nth-child(25) {}
+
+        div:nth-child(26) {}
+
+        div:nth-child(27) {}
+
+        div:nth-child(28) {}
+
+        div:nth-child(29) {}
+
+        div:nth-child(30) {}
+
+        @keyframes disco {
+
+            33.3% {
+                top: 0;
+                left: calc(100% - 80px);
+                background-color: red;
+            }
+
+            66.6% {
+                top: calc(100% - 80px);
+                left: calc(50% - 40px);
+                background-color: orange;
+            }
+        }
+
+        @keyframes disco2 {
+            0% {
+                top: calc(100% - 80px);
+                left: 0;
+                background-color: darkblue;
+            }
+
+            33.3% {
+                top: calc(100% - 80px);
+                left: calc(100% - 80px);
+                background-color: blue;
+            }
+
+            66.6% {
+                top: 0;
+                left: calc(50% - 40px);
+                background-color: lightskyblue;
+            }
+        }
     </style>
 </head>
 
 <body>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
     <div></div>
     <div></div>
     <div></div>
