--- a/index.html
+++ b/index.html
@@ -192,12 +192,14 @@
                 top: 0;
                 left: calc(100% - 80px);
                 background-color: red;
+                border-radius: 25%;
             }
 
             66.6% {
                 top: calc(100% - 80px);
                 left: calc(50% - 40px);
                 background-color: orange;
+                border-radius: 0;
             }
 
             100% {
@@ -218,12 +220,14 @@
                 top: calc(100% - 80px);
                 left: calc(100% - 80px);
                 background-color: blue;
+                border-radius: 25%;
             }
 
             66.6% {
                 top: 0;
                 left: calc(50% - 40px);
                 background-color: lightskyblue;
+                border-radius: 0;
             }
 
             100% {
